--- a/app/html/bibliApp/adherent/adherentCreation.html
+++ b/app/html/bibliApp/adherent/adherentCreation.html
@@ -1,13 +1,25 @@
 <div class="alert alert-success" role="alert" ng-show="add">
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	
-	L'Adh&eacute;rent {{addedNom}} {{addedPrenom}} a &eacute;t&eacute; corr&eacute;ctement cr&eacute;e.
+	L'Adh&eacute;rent {{addedNom}} {{addedPrenom}} a &eacute;t&eacute; correctement cr&eacute;&eacute;.
 </div>
 
-<div class="alert alert-danger" role="alert" ng-show="fail">
+<div class="alert alert-success" role="alert" ng-show="modif">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	
+	L'Adh&eacute;rent {{modifiedNom}} {{modifiedPrenom}} a &eacute;t&eacute; correctement modifi&eacute;.
+</div>
+
+<div class="alert alert-danger" role="alert" ng-show="failAdd">
 	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	
 	Erreur lors de la cr&eacute;ation de l'adh&eacute;rent.
+</div>
+
+<div class="alert alert-danger" role="alert" ng-show="failModif">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	
+	Erreur lors de la modification de l'adh&eacute;rent.
 </div>
 
 <div class="col-xs-offset-1">
