--- a/app/html/bibliApp/media/home.html
+++ b/app/html/bibliApp/media/home.html
@@ -19,7 +19,7 @@
 			</div>
 			
 			<div class="col-xs-offset-1 col-xs-2">
-				<button type="button" class="btn btn-warning" ng-click="resultMedia(1)">Recherche</button>
+				<button type="button" class="btn btn-warning" ng-click="resultMedia(1);varTri='titre'">Recherche</button>
 			</div>
 		</div>
 	</form>
@@ -28,12 +28,28 @@
 <br>
 
 <div ng-show="showme">
+
+	<form class="form-inline"> 
+		<div class="form-group">
+			<h2>R&eacute;sultats de la recherche :</h2>
+			<label class="col-xs-6 control-label">&Eacute;lements par page:</label>
+				<div class="col-xs-2">
+				<select ng-model="element" ng-change="nbElmtByPage=element;resultMedia(1);varTri='titre'">
+					<option value=10>10</option>
+					<option selected value=20 >20</option>
+					<option value=50>50</option>
+					<option value=100>100</option>
+				</select>
+			</div>
+		</div>
+	</form>
+	<br>
 	<table class="table table-bordered table-hover">
 		<thead>
 			<tr class="row warning">
-				<th class="col-xs-4" id="titre"><a ng-click="tri()">Titre</a></th>
-				<th class="col-xs-1" id="type">Type</th>
-				<th class="col-xs-3" id="auteur">Auteur</th>
+				<th class="col-xs-4" id="titre"><a ng-click="varTri='titre';resultMedia(1)">Titre</a></th>
+				<th class="col-xs-1" id="type"><a ng-click="varTri='type';resultMedia(1)">Type</a></th>
+				<th class="col-xs-3" id="auteur"><a ng-click="varTri='auteur';resultMedia(1)">Auteur</a></th>
 				<th class="col-xs-2" id="emprunt">Emprunteur</th>
 				<th class="col-xs-2" id="retour">Date retour</th>
 			</tr>
@@ -46,21 +62,21 @@
 				<td>{{resultat.auteur}}</td>
 				<td>{{resultat.emprunteur.nom}} {{resultat.emprunteur.prenom}}</td>
 				<td>{{resultat.retour}}</td>
-				<td><a ng-click="mediaVisualisation()"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
+				<td><a ng-click="mediaVisualisation(resultat.id)"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
 			</tr>			
 		</tbody>	
 	</table>
 	
 	<nav aria-label="Page navigation">
 	  <ul class="pagination">
-	    <li>
-	      <a ng-click="" aria-label="Previous">
+	    <li ng-hide="pageActuelle==1">
+	      <a ng-click="resultMedia(pageActuelle-1)" aria-label="Previous">
 	        <span aria-hidden="true">&laquo;</span>
 	      </a>
 	    </li>
-	    <li ng-repeat="i in getNumber(pageMax) track by $index"><a ng-click="resultMedia($index+1)">{{$index+1}}</a></li>
-	    <li>
-	      <a href="#" aria-label="Next">
+	    <li ng-repeat="i in getNumber(pageMax) track by $index" ><a ng-click="resultMedia($index+1)">{{$index+1}}</a></li>
+	    <li ng-hide="pageActuelle==pageMax">
+	      <a ng-click="resultMedia(pageActuelle+1)" aria-label="Next">
 	        <span aria-hidden="true">&raquo;</span>
 	      </a>
 	    </li>
