--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
 		<script src="/js/bibliApp/Services/media/MediaCreationService.js"></script>
 		
 		<script src="/js/bibliApp/Services/adherent/AdherentCreationService.js"></script>
+		<script src="/js/bibliApp/Services/adherent/AdherentRechercheService.js"></script>
 		
 		<script src="/js/bibliApp/Services/LoginLogout/Authentification.js"></script>
 		
