--- a/app/html/bibliApp/media/mediaVisualisation.html
+++ b/app/html/bibliApp/media/mediaVisualisation.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="form-group col-xs-12">
 		<label class="col-xs-5 col-ld-4">Emprunt&eacute;</label>
-		<p class="col-xs-7 col-ld-8">{{media.emprunteurs.size>0?media.emprunteurs[0].nom:'Libre'}}</p>
+		<p class="col-xs-7 col-ld-8">{{media.emprunteurs.length>0?media.emprunteurs[0].adherent.nom:'Libre'}}</p>
 	</div>
 	<div ng-if=media.emprunteurs.size>
 		0" class="form-group col-xs-12"> <label class="col-xs-5 col-ld-4">Date
