Resolution de bug

--- a/app/html/bibliApp/media/mediaCreation.html
+++ b/app/html/bibliApp/media/mediaCreation.html
@@ -49,6 +49,10 @@
 
 		<div class="col-xs-offset-2">
 			<input type="submit" class="btn btn-warning">
+		</div><br>
+		
+		<div class="col-xs-offset-2">
+			<a href="/#/mediaVisualisation/{{idMedia}}" class="btn btn-warning">Annuler</a>
 		</div>
 	</form>
 </div>
