--- a/app/html/bibliApp/adherent/adherentVisualisation.html
+++ b/app/html/bibliApp/adherent/adherentVisualisation.html
@@ -4,6 +4,18 @@
 </div>
 <br>
 
+	<div class="alert alert-danger" role="alert" ng-show="mediaNotFound">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		
+		M&eacute;dia non trouv&eacute;.
+	</div>
+	
+	<div class="alert alert-danger" role="alert" ng-show="mediaTooMuchFound">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		
+		Plusieurs M&eacute;dias trouv&eacute;s.
+	</div>
+	
 <div
 	class="col-xs-10 col-xs-offset-1 padding-space up-down-space border-red">
 	<div class="form-group col-xs-12">
@@ -57,13 +69,13 @@
 
 			<tbody class="bg-danger">
 				<tr ng-repeat="media in medias | limitTo:nbDisplay">
-					<td><a href="/#/mediaVisualisation?idMedia={{media.media.id}}">{{media.media.titre}}</a>
+					<td><a href="/#/mediaVisualisation/{{media.media.id}}">{{media.media.titre}}</a>
 					</td>
 					<td class="hidden-xs hidden-sm"><a
-						href="/#/mediaVisualisation?idMedia={{media.media.id}}">{{media.media.auteur}}</a>
+						href="/#/mediaVisualisation/{{media.media.id}}">{{media.media.auteur}}</a>
 					</td>
 					<td class="hidden-xs"><a
-						href="/#/mediaVisualisation?idMedia={{media.media.id}}">{{media.media.type}}</a>
+						href="/#/mediaVisualisation/{{media.media.id}}">{{media.media.type}}</a>
 					</td>
 				</tr>
 			</tbody>
@@ -100,6 +112,7 @@
 			<input class="col-xs-2 btn btn-warning" type="submit" value="Ajouter">
 		</form>
 	</div>
+	
 </div>
 
 <div class="col-xs-2 col-xs-offset-5 up-down-space">
