Ajout message d'erreur sur ajout emprunteur

--- a/app/html/bibliApp/media/mediaVisualisation.html
+++ b/app/html/bibliApp/media/mediaVisualisation.html
@@ -4,6 +4,12 @@
 	<h1 class="col-xs-5 col-xs-offset-4">Fiche M&eacute;dia</h1>
 </div>
 
+<div class="alert alert-danger" role="alert" ng-show="fail" id="creation-alert">
+	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	
+	L'op&eacute;ration a echou&eacute;.
+</div>
+
 <br>
 
 <div
