Début du cablage du login, recherche media et recherche adherent

--- a/app/html/bibliApp/adherent/adherentCreation.html
+++ b/app/html/bibliApp/adherent/adherentCreation.html
@@ -84,7 +84,7 @@
 			<div class="form-group">
 				<label class="col-xs-3 control-label">Code Postal :</label>
 				<div class="col-sm-3">
-					<input type="text" class="form-control" ng-model="adhCp">
+					<input type="number" maxlength="5" class="form-control" ng-model="adhCp">
 				</div>
 				
 				<label class=" col-xs-2 control-label">Ville :</label>
@@ -105,7 +105,7 @@
 			<div class="form-group">
 				<label class="col-xs-3 control-label">Montant de la cotisation :</label>
 				<div class="col-sm-3">
-					<input type="text" class="form-control" ng-model="adhCotisationMontant">
+					<input type="number" class="form-control" ng-model="adhCotisationMontant">
 				</div>
 			</div><br>
 			
