--- a/app/html/bibliApp/media/home.html
+++ b/app/html/bibliApp/media/home.html
@@ -58,9 +58,9 @@
 		</thead>
 		<tbody>
 			<tr class="row" ng-repeat="resultat in resultats">
-				<td>{{resultat.titre}}</td>
+				<td>{{resultat.title}}</td>
 				<td>{{resultat.type}}</td>
-				<td>{{resultat.auteur}}</td>
+				<td>{{resultat.author}}</td>
 				<td>{{resultat.emprunteur.nom}} {{resultat.emprunteur.prenom}}</td>
 				<td>{{resultat.retour}}</td>
 				<td><a ng-click="mediaVisualisation(resultat.id)"><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span></a></td>
