--- a/app/html/login/login.html
+++ b/app/html/login/login.html
@@ -8,7 +8,7 @@
 
 <div class="row" ng-controller="LoginCtrl">
 	<div class="col-xs-6 col-xs-offset-2 marge-top-menu ">
-		<form class="form-horizontal" ng-submit="validLogin()" name="formLogin" METHOD="POST" novalidate>
+		<form class="form-horizontal" ng-submit="validLogin()" name="formLogin" method="POST" novalidate>
  			<div class="form-group" >
 				<div class="col-sm-8 col-xs-offset-4">
 	      			<input  type="text" 
