--- a/app/index.html
+++ b/app/index.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html ng-app="bibliApp">
 	<head>
-		<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-		<link rel="stylesheet" href="/css/style.css">
-		<link rel="stylesheet" href="/css/style_headerfooter.css">
+		<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="./css/style_headerfooter.css">
 	
-		<script src="/bower_components/angular/angular.js"></script>
-		<script src="/bower_components/angular-route/angular-route.js"></script>
-		<script src="/bower_components/underscore/underscore.js"></script>
-		<script src="/bower_components/jquery/dist/jquery.js"></script>
-		<script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-		<script src="/bower_components/angular-messages/angular-messages.js"></script>
-		<script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
-		<script src="/bower_components/angular-cookies/angular-cookies.js"></script>
+		<script src="./bower_components/angular/angular.js"></script>
+		<script src="./bower_components/angular-route/angular-route.js"></script>
+		<script src="./bower_components/underscore/underscore.js"></script>
+		<script src="./bower_components/jquery/dist/jquery.js"></script>
+		<script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
+		<script src="./bower_components/angular-messages/angular-messages.js"></script>
+		<script src="./bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+		<script src="./bower_components/angular-cookies/angular-cookies.js"></script>
 		
-		<script src="/js/bibliApp/bibliApp.js"></script>
+		<script src="./js/bibliApp/bibliApp.js"></script>
 
-		<script src="/js/bibliApp/Controllers/media/HomeCtrl.js"></script>
-		<script src="/js/bibliApp/Controllers/media/mediaCreationCtrl.js"></script>
-		<script src="/js/bibliApp/Controllers/media/mediaVisualisationCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/media/HomeCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/media/MediaCreationCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/media/MediaVisualisationCtrl.js"></script>
 		
-		<script src="/js/bibliApp/Controllers/adherent/AdherentRechercheCtrl.js"></script>
-		<script src="/js/bibliApp/Controllers/adherent/AdherentVisualisationCtrl.js"></script>
-		<script src="/js/bibliApp/Controllers/adherent/AdherentCreationCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/adherent/AdherentRechercheCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/adherent/AdherentVisualisationCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/adherent/AdherentCreationCtrl.js"></script>
 		
-		<script src="/js/bibliApp/Controllers/login/LoginCtrl.js"></script>
-		<script src="/js/bibliApp/Controllers/header/HeaderCtrl.js"></script>
-		<script src="/js/bibliApp/Controllers/MainCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/login/LoginCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/header/HeaderCtrl.js"></script>
+		<script src="./js/bibliApp/Controllers/MainCtrl.js"></script>
 
-		<script src="/js/bibliApp/Services/media/MediaRechercheService.js"></script>
-		<script src="/js/bibliApp/Services/media/MediaCreationService.js"></script>
+		<script src="./js/bibliApp/Services/media/MediaRechercheService.js"></script>
+		<script src="./js/bibliApp/Services/media/MediaCreationService.js"></script>
 		
-		<script src="/js/bibliApp/Services/adherent/AdherentCreationService.js"></script>
-		<script src="/js/bibliApp/Services/adherent/AdherentRechercheService.js"></script>
+		<script src="./js/bibliApp/Services/adherent/AdherentCreationService.js"></script>
+		<script src="./js/bibliApp/Services/adherent/AdherentRechercheService.js"></script>
 		
-		<script src="/js/bibliApp/Services/LoginLogout/Authentification.js"></script>
-		<script src="/js/bibliApp/Services/Urls/UrlService.js"></script>
+		<script src="./js/bibliApp/Services/LoginLogout/Authentification.js"></script>
+		<script src="./js/bibliApp/Services/Urls/UrlService.js"></script>
 				
-		<script src="/js/bibliApp/Directive/FillPage.js"></script>
+		<script src="./js/bibliApp/Directive/FillPage.js"></script>
 	</head>
 	
 	<body class="container" ng-controller="MainCtrl">
 		<div ng-if="isConnected()">	
-			<div id="header-div" ng-include="'/html/header-footer/header.html'" ng-if="menu()"></div>
+			<div id="header-div" ng-include="'./html/header-footer/header.html'" ng-if="menu()"></div>
 			
 			<div fill-page>
 				<ng-view></ng-view>
 			</div>
 			
-			<div id="footer-div" ng-include="'/html/header-footer/footer.html'"></div>
+			<div id="footer-div" ng-include="'./html/header-footer/footer.html'"></div>
 		</div>
 		<div ng-if="!isConnected()">
-			<div ng-include="'/html/login/login.html'" ></div>
+			<div ng-include="'./html/login/login.html'" ></div>
 		</div>
 	</body>
 </html>
