--- a/app/html/header-footer/header.html
+++ b/app/html/header-footer/header.html
@@ -28,7 +28,7 @@
 			</div >
 			
 			<div class="col-xs-2">
-		  		<a href="/#/home" ><img class="img-responsive center-block img-circle border-image"  src="/img/logo.png"/></a>
+		  		<a href="/#/home" ><img class="img-responsive center-block img-circle border-image"  src="./img/logo.png"/></a>
 			</div>
 		</div>
 		
